# Equilibria

./: .gitignore  Dockerfile  Dockerfile.bak  Procfile  README.md  nixpacks.toml  package-lock.json  pyproject.toml  render.yaml  requirements.txt
.pytest_cache/v/cache/: nodeids
data/processed/kano_nigeria/: facilities.geojson
data/processed/kano_state_nigeria/: facilities.geojson
data/raw/roads/: roads_drive_7.5169_10.8898_7.7869_11.1598.graphml  roads_drive_8.387_11.859_8.657_12.129.graphml  roads_drive_8.4014_11.7598_8.6714_12.0298.graphml
demo/: script.md
equilibria_2/: LICENSE  README.md  pyproject.toml
equilibria_2/src/equilibria/agents/: cartographer_agent.py  data_fetcher_agent.py  equity_scoring_agent.py  intake_agent.py  llm_client.py  orchestrator.py  report_agent.py  site_optimizer_agent.py  validator_agent.py
equilibria_2/src/equilibria/data_layer/: facilities.py  population.py  roads.py
equilibria_2/src/equilibria/mcp_server/: server.py  spatial_tools.py
equilibria_2/src/equilibria/ui/: app.py
equilibria_2/tests/: test_data_layer.py  test_spatial_tools.py
equilibria_deploy/: DEPLOYMENT_GUIDE.md  Dockerfile  api.py  check.py  frontend.env.development  frontend.env.production  render.yaml
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
src/equilibria/: api.py
src/equilibria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/equilibria/agents/: cartographer_agent.py  config.py  data_fetcher_agent.py  (+6 more)
tests/: test_data_layer.py
(+5 files in other folders)
