[project]
name = "equilibria"
version = "0.1.0"
description = "Equity-weighted facility siting agent — multi-agent geospatial decision support for NGOs and under-resourced local governments."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "google-adk>=2.3.0",
    "mcp>=1.0.0",
    "geopandas>=1.1.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
    "networkx>=3.0",
    "osmnx>=2.0.0",
    "scikit-learn>=1.4.0",
    "rasterio>=1.3.0",
    "folium>=0.16.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "geopy>=2.4.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
